--- a/projects.html
+++ b/projects.html
@@ -40,6 +40,16 @@
             <a href="https://github.com/magartamana64-hub/learning-journal-pwa" target="_blank" class="btn">GitHub</a>
           </div>
         </div>
+        <div class="project-card">
+          <h3>Temperature Converter PWA</h3>
+          <p>
+            A progressive web app that converts temperature to different emasurement degrees.
+          </p>
+          <div>
+            <a href="https://github.com/magartamana64-hub/TemperatureConverterPWA" target="_blank" class="btn">GitHub</a>
+            <a href="https://magartamana64-hub.github.io/TemperatureConverterPWA/" target="_blank" class="btn">Live Link</a>
+          </div>
+        </div>
 
       </div>
     </section>
