--- a/projects.html
+++ b/projects.html
@@ -38,6 +38,7 @@
           </p>
           <div>
             <a href="https://github.com/magartamana64-hub/learning-journal-pwa" target="_blank" class="btn">GitHub</a>
+             <a href="https://magartamana64-hub.github.io/learning-journal-pwa/" target="_blank" class="btn">Live Link</a>
           </div>
         </div>
         <div class="project-card">
