--- a/journal.html
+++ b/journal.html
@@ -1,49 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Learning Journal | Weekly Entries</title>
-  <link rel="stylesheet" href="css/style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Learning Journal | Weekly Entries</title>
+    <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
-  <header>
-    <nav>
-      <h1 class="logo">Learning Journal</h1>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="journal.html" class="active">Journal</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="about.html">About</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header>
+        <nav>
+            <h1 class="logo">Learning Journal</h1>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="journal.html" class="active">Journal</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <main>
-    <section class="intro">
-      <div class="cover-image">
-        <img src="images/journal.png" alt="Journal cover image" />
-      </div>
+    <main>
+        <section class="intro">
+            <div class="cover-image">
+                <img src="images/journal.png" alt="Journal cover image" />
+            </div>
 
-      <h2>Weekly Learning Journal</h2>
-      <p>Each week, I reflect on my learning progress, challenges, and new skills gained in Mobile Application Development.</p>
+            <h2>Weekly Learning Journal</h2>
+            <p>Each week, I reflect on my learning progress, challenges, and new skills gained in Mobile Application
+                Development.</p>
 
-      <article class="journal-entry">
-        <h3>Week 2 : Frontend Fundamentals</h3>
-        <p><strong>How did you approach mobile-first design?</strong><br>
-        I started designing for small screens first, ensuring content and layout were simple and functional. Then I used media queries to adjust for larger screens.</p>
 
-        <p><strong>What was the most useful HTML or CSS concept you applied?</strong><br>
-        Flexbox was the most helpful tool for creating a clean and responsive navigation layout.</p>
+            <article class="journal-entry">
+                <h3>Week 1: Frontend Fundamentals (Temperature Converter PWA)</h3>
+                <p><strong>How did you approach mobile-first design?</strong><br>
+                    I designed for mobile screens first with a simple layout and large buttons. Then I used media
+                    queries to adjust for bigger screens.</p>
 
-        <p><strong>What part of HTML or CSS did you find most challenging?</strong><br>
-        I found media queries slightly tricky at first, especially balancing font sizes and spacing across devices.</p>
-      </article>
-    </section>
-  </main>
+                <p><strong>What was the most useful HTML or CSS concept you applied?</strong><br>
+                    Flexbox helped align inputs and results neatly, keeping the layout responsive and clean.</p>
 
-  <footer>
-    <p>&copy; 2025 Tamana Magar | School of Games and Creative Technology</p>
-  </footer>
+                <p><strong>What part of HTML or CSS did you find most challenging?</strong><br>
+                    Media queries were tricky at first, especially maintaining layout consistency across different
+                    screen sizes.</p>
+            </article>
+
+
+            <article class="journal-entry">
+                <h3>Week 2 : Frontend Fundamentals</h3>
+                <p><strong>How did you approach mobile-first design?</strong><br>
+                    I started designing for small screens first, ensuring content and layout were simple and functional.
+                    Then I used media queries to adjust for larger screens.</p>
+
+                <p><strong>What was the most useful HTML or CSS concept you applied?</strong><br>
+                    Flexbox was the most helpful tool for creating a clean and responsive navigation layout.</p>
+
+                <p><strong>What part of HTML or CSS did you find most challenging?</strong><br>
+                    I found media queries slightly tricky at first, especially balancing font sizes and spacing across
+                    devices.</p>
+            </article>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Tamana Magar | School of Games and Creative Technology</p>
+    </footer>
 </body>
+
 </html>
