--- a/about.html
+++ b/about.html
@@ -7,17 +7,7 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <header>
-    <nav>
-      <h1 class="logo">Learning Journal</h1>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="journal.html">Journal</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="about.html" class="active">About</a></li>
-      </ul>
-    </nav>
-  </header>
+   <header id="main-header"></header>
 
   <main>
     <section class="intro">
