--- a/index.html
+++ b/index.html
@@ -7,17 +7,7 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <header>
-    <nav>
-      <h1 class="logo">Learning Journal</h1>
-      <ul class="nav-links">
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="journal.html">Journal</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="about.html">About</a></li>
-      </ul>
-    </nav>
-  </header>
+  <header id="main-header"></header>
 
   <main>
     <section class="intro">
@@ -25,6 +15,7 @@
       <div class="cover-image">
         <img src="images/cover.png" alt="Cover image of my learning journal" />
       </div>
+      <p id="date-time"></p>
 
       <h2>Hello, I’m Tamana Magar</h2>
       <p>
@@ -37,5 +28,6 @@
   <footer>
     <p>&copy; 2025 Tamana Magar | School of Games and Creative Technology</p>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 </html>
