--- a/journal.html
+++ b/journal.html
@@ -9,17 +9,7 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <h1 class="logo">Learning Journal</h1>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="journal.html" class="active">Journal</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
-        </nav>
-    </header>
+     <header id="main-header"></header>
 
     <main>
         <section class="intro">
