--- a/about.html
+++ b/about.html
@@ -8,7 +8,6 @@
 </head>
 <body>
    <header id="main-header"></header>
-
   <main>
     <section class="intro">
       <div class="cover-image">
@@ -16,6 +15,10 @@
       </div>
 
       <h2>About Me</h2>
+      <div class="theme-container">
+      <button id="theme-toggle" class="btn">Toggle Theme</button>
+    </div>
+      
       <p>
         I’m <strong>Tamana Magar</strong>, a student of <strong>BSc (Hons) Computer Science</strong> at the School of Games and Creative Technology.  
         I’m passionate about mobile app design, user experience, and building creative, functional digital solutions.
@@ -31,5 +34,6 @@
   <footer>
     <p>&copy; 2025 Tamana Magar | School of Games and Creative Technology</p>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 </html>
