--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
   <header id="main-header"></header>
-
   <main>
+    
+
     <section class="intro">
     
       <div class="cover-image">
@@ -23,6 +24,9 @@
         Mobile Application Development module and showcase my creative projects.
       </p>
     </section>
+     <div class="theme-container">
+      <button id="theme-toggle" class="btn">Toggle Theme</button>
+    </div>
   </main>
 
   <footer>
