--- a/journal.html
+++ b/journal.html
@@ -10,6 +10,9 @@
 
 <body>
      <header id="main-header"></header>
+     <div class="theme-container">
+      <button id="theme-toggle" class="btn">Toggle Theme</button>
+    </div>
 
     <main>
         <section class="intro">
@@ -56,6 +59,7 @@
     <footer>
         <p>&copy; 2025 Tamana Magar | School of Games and Creative Technology</p>
     </footer>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
