--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,9 @@
 </head>
 <body>
    <header id="main-header"></header>
+   <div class="theme-container">
+      <button id="theme-toggle" class="btn">Toggle Theme</button>
+    </div>
 
   <main>
     <section class="intro">
@@ -49,5 +52,6 @@
   <footer>
     <p>&copy; 2025 Tamana Magar | School of Games and Creative Technology</p>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 </html>
