--- a/journal.html
+++ b/journal.html
@@ -53,6 +53,18 @@
                     I found media queries slightly tricky at first, especially balancing font sizes and spacing across
                     devices.</p>
             </article>
+
+             <article class="journal-entry">
+                <h3>Week 3 : JAVASCRIPT & DOM MANIPULATION </h3>
+                <p><strong>Which DOM selection methods did you use, and why did you choose them?</strong><br>
+                    In this lab, I used several DOM selection functions, including getElementById, querySelector, and querySelectorAll. I used getElementById since the unique elements, namely the navigation header and the theme toggle button, required particular interaction. The ease of manipulating certain elements of my interface made it easy to use querySelector to target specific elements by using the CSS-style selectors. In the meantime, querySelectorAll() came in handy to extract several links in the navigation and underline the current page. A combination of these approaches offered the flexibility, ease, and accuracy when it comes to dynamically updating content and design on all the pages of my Learning Journal website.</p>
+
+                <p><strong>What was the most challenging part about linking JavaScript with your HTML?</strong><br>
+                    The most difficult part of my JavaScript and HTML connection was getting my script to be loaded when it was the right time. My code had not initially worked, as it was executed before all elements in the HTML had loaded. My solution to this was the DOMContentLoaded event, which makes sure that JavaScript does not run until the DOM is ready. The other difficulty was the functionality at a multi-page level. As an illustration, my theme toggle had been functioning on one page, but it was reinstated when I used other pages. To solve this, I employed Local storage to store the preference of the theme that the user had. These problems helped me to understand how crucial the correct timing and continuous data are in the process of JavaScript development.</p>
+
+                <p><strong>How did you test and debug your JavaScript code?</strong><br>
+                    Browser developer tools, in particular the Console of Google Chrome, proved to be quite helpful to test and debug my JavaScript code. To track the values of variables, ensure that the right element was selected, and ensure that event listeners were functioning, I relied on statements of console.log statements. Whenever there were mistakes, i.e. a null reference, I realised that my script was being executed prematurely or in search of elements that were not present. I had also been updating pages and changing between them to ensure that Local Storage retained the right theme. Regular testing helped me to understand how important real-time feedback, incremental debugging, and the application of developer tools are to make sure that everything works in my Learning Journal PWA.</p>
+            </article>
         </section>
     </main>
 
