--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,8 @@
    <div class="theme-container">
       <button id="theme-toggle" class="btn">Toggle Theme</button>
     </div>
+<h2>Featured Project Video</h2>
+<div id="video-container"></div>
 
   <main>
     <section class="intro">
@@ -53,5 +55,6 @@
     <p>&copy; 2025 Tamana Magar | School of Games and Creative Technology</p>
   </footer>
   <script src="js/script.js"></script>
+  <script src="js/thirdparty.js"></script>
 </body>
 </html>
